[tool.poetry]
name = "docs"
version = "0.1.0"
description = "My personal website"
authors = ["m1yag1 <mike.arbelaez@rice.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
# Project dependencies
Sphinx = "*"
sphinx-autobuild = "*"
sphinx-book-theme = "^0.1.7"
myst-parser = {version = "*", extras = ["linkify"]}

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"
flake8-docstrings = "*"
flake8-import-order = "*"
pep8-naming = "*"
pylint = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 125
target-version = ["py37", "py38", "py39"]

[tool.pylint.FORMAT]
disable = ["fixme"]
good-names = ["i", "j", "k", "ex", "Run", "_", "x", "y", "z", "fd"]
ignore = [".venv/*", "build/*", "dist/*"]
max-line-length = 125
reports = false

[tool.pylint.SIMILARITIES]
ignore-imports = true
min-similarity-lines = 7

[tool.pylint.TYPECHECK]
ignored-modules = ["distutils", "py"]
